Projet total/Assembleur/tests/bad/testfile-bad-space-1.ms
; .space can't go in section text
    .section text
    .space 3
